fix: remove long word overflow on arrow icon

--- a/front/src/assets/base.css
+++ b/front/src/assets/base.css
@@ -46,5 +46,4 @@ select {
   appearance: none !important;
   cursor: pointer;
   width: auto;
-  border-radius: 9999px;
 }
